--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,3 +1,8 @@
 /* This file is for your main application css. */
 
 @import "./phoenix.css";
+
+$bgcolor: #123456;
+body {
+  background-color: $bgcolor;
+}
