accounts, user, credential and user form updated

--- a/lib/chit_chat_web/templates/user/form.html.eex
+++ b/lib/chit_chat_web/templates/user/form.html.eex
@@ -12,7 +12,21 @@
   <%= label f, :username %>
   <%= text_input f, :username %>
   <%= error_tag f, :username %>
+  <div class="form-group">
+    <%= inputs_for f, :credential, fn cf -> %>
+      <%= label cf, :email %>
+      <%= text_input cf, :email %>
+      <%= error_tag cf, :email %>
 
+      <%= label cf, :password %>
+      <%= password_input cf, :password %>
+      <%= error_tag cf, :password %>
+
+      <%= label cf, :password_confirmation %>
+      <%= password_input cf, :password_confirmation %>
+      <%= error_tag cf, :password_confirmation %>
+    <% end %>
+  </div>
   <div>
     <%= submit "Save" %>
   </div>
